=== HEAD

* Fix server used by Dataset#insert_select on PostgreSQL (jeremyevans)

* Fix server used for deleting model instances when using sharding (jeremyevans)

=== 4.16.0 (2014-11-01)

* Make Database#create_table? and #create_join_table? not use IF NOT EXISTS if indexes are being added (jeremyevans) (#904)

* Dataset#distinct now accepts virtual row blocks (chanks) (#901)

* Recognize disconnect errors in the postgres adapter when SSL is used (jeremyevans) (#900)

* Stop converting '' default values to nil default values on MySQL (jeremyevans)

* Add Model#qualified_pk_hash, for returning a hash with qualified pk keys (jeremyevans)

* Make validates_unique use a qualified primary key if the dataset is joined (jeremyevans) (#895)

* Make Sequel::Model.cache_associations = false skip the database's schema cache when loading the schema (jeremyevans)

* Make Database#foreign_key_list work on Microsoft SQL Server 2005 (jeremyevans)

* Make create_table with :foreign option reversible on PostgreSQL (jeremyevans)

* Make drop_table with :foreign option on PostgreSQL drop a foreign table (johnnyt) (#892)

=== 4.15.0 (2014-10-01)

* Make AssociationReflection#reciprocal not raise error if associated class contains association with invalid associated class (jeremyevans)

* Make create_view(:view_name, dataset, :materialized=>true) reversible on PostgreSQL (jeremyevans)

* Add support for creating foreign tables on PostgreSQL using :foreign and :options create_table options (jeremyevans)

* Raise Error if a primary key is necessary to use an association, but the model doesn't have a primary key (jeremyevans)

* Make tactical_eager_loading plugin work for limited associations (jeremyevans)

* Add PlaceholderLiteralizer#with_dataset, for returning a new literalizer using a modified dataset (jeremyevans)

* Support active_model 4.2.0beta1 in the active_model plugin (jeremyevans)

* Make Dataset#insert in the informix adapter return last inserted id (jihwans) (#887)
